# 
# MIT License
# 
# Copyright (c) 2022 AtomicGamer9523
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# 

[package]
name = "memutils"
version = "1.0.0"
edition = "2021"
authors = ["AtomicGamer9523@github.com"]

[lib]
name = "memutils"

[[bin]]
name = "memutilsbin"
path = "main.rs"

[dependencies.volatile]
package = "volatile"
path = "./volatile"
optional = false

[dependencies.memutilscore]
package = "memutilscore"
path = "./core"
optional = false

[dependencies.memutilsmacros]
package = "memutilsmacros"
path = "./macros"
optional = false

[features]
default = ["full"]
full = ["reveal_hidden", "unsafe_main"]

reveal_hidden = ["memutilscore/reveal_hidden"]
unsafe_main = ["memutilsmacros/not_safe_main"]

[workspace]
members = [
    "bit_field",
    "volatile",
    "macros",
    "tests",
    "core"
]
